--- a/index.html
+++ b/index.html
@@ -3,13 +3,40 @@
 	<head>
 		<title>MorgeMönsch</title>
 		<link rel="stylesheet" href="./css/spectre.css" />
+		<link rel="stylesheet" href="./css/custom.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 	</head>
 	<body>
-		<div class="p-centered">
-			<div class="panel col-2 col-mx-auto">
+		<div class="bg-dark columns container">
+			<div class="panel col-xl-6 col-md-10 col-mx-auto">
 				<div class="panel-header text-center">
-					<div class="panel-title h5 mt-10">Morgemönsch</div>
+					<figure class="avatar avatar-xl">
+						<img src="./img/morgemoensch-avatar.jpg" alt="MorgeMoensch Avatar" class="img-fit-cover">
+					</figure>
+					<div class="panel-title h2 mt-10">Morgemönsch</div>
 					<div class="panel-subtitle">MorgeMönsch</div>
+					<p class="m-20" id="aboutMe">Just a guy interested in coding and privacy.</p>
+				</div>
+				<div class="divider"></div>
+				<div class="panel-body">
+					<h3 class="h5">Technologies:</h3>
+					<dl>
+						<dd><div class="text-normal d-inline">Ruby on Rails</div></dd>
+						<dd><div class="text-normal d-inline">React</div></dd>
+						<dd><div class="text-normal d-inline">.NET Core</div></dd>
+						<dd><div class="text-normal d-inline">Java</div></dd>
+					</dl>
+					<h3 class="h5">Social:</h3>
+					<dl>
+						<dd><div class="text-normal d-inline"><a href="https://twitter.com/morgemoensch" class="text text-light">Twitter</a></div></dd>
+						<dd><div class="text-normal"><a href="https://github.com/morgemoensch" class="text text-light">Github</a></div></dd>
+					</dl>
+					
+					<h3 class="h5">Public Projects:</h3>
+					<dl>
+						<dd><div class="text-normal"><a href="https://thecharmingtools.com" class="text text-light">TheCharmingTools</a></div></dd>
+						<dd><div class="text-normal"><a href="https://bcschuepfen.ch" class="text text-light">BC Schüpfen</a></div></dd>
+					</dl>
 				</div>
 			</div>
 		</div>
