--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 				<div class="panel-body">
 					<h3 class="h5">Technologies:</h3>
 					<dl>
-						<dd><div class="text-normal d-inline">Ruby on Rails</div></dd>
-						<dd><div class="text-normal d-inline">React</div></dd>
-						<dd><div class="text-normal d-inline">.NET Core</div></dd>
-						<dd><div class="text-normal d-inline">Java</div></dd>
+						<dd><div class="text-normal d-inline"><img src="./img/logos/rails.svg"><div class="listText text text-light d-inline">Ruby on Rails</a></div></dd>
+						<dd><div class="text-normal d-inline"><img src="./img/logos/react.svg"><div class="listText text text-light d-inline">React</div></div></dd>
+						<dd><div class="text-normal d-inline "><img src="./img/logos/dotnet-core.svg"><div class="listText d-inline">.NET Core</div></div></dd>
+						<dd><div class="text-normal d-inline"><img src="./img/logos/java.svg"><div class="listText d-inline	">Java</div></div></dd>
 					</dl>
 					<h3 class="h5">Social:</h3>
 					<dl>
-						<dd><div class="text-normal d-inline"><a href="https://twitter.com/morgemoensch" class="text text-light">Twitter</a></div></dd>
-						<dd><div class="text-normal"><a href="https://github.com/morgemoensch" class="text text-light">Github</a></div></dd>
+						<dd><div class="text-normal d-inline"><img src="./img/logos/twitter.svg"><a href="https://twitter.com/morgemoensch" class="text text-light listText">Twitter</a></div></dd>
+						<dd><div class="text-normal d-inline"><img src="./img/logos/github.svg"><a href="https://github.com/morgemoensch" class="text text-light listText">Github</a></div></dd>
 					</dl>
 					
 					<h3 class="h5">Public Projects:</h3>
