Fix HTML warnings

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>MorgeMönsch</title>
 		<link rel="stylesheet" href="./css/spectre.css" />
 		<link rel="stylesheet" href="./css/custom.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+		<meta charset="utf-8" />
 	</head>
 	<body>
 		<div class="bg-dark columns container">
@@ -13,30 +14,30 @@
 					<figure class="avatar avatar-xl">
 						<img src="./img/morgemoensch-avatar.jpg" alt="MorgeMoensch Avatar" class="img-fit-cover">
 					</figure>
-					<div class="panel-title h2 mt-10">Morgemönsch</div>
-					<div class="panel-subtitle">MorgeMönsch</div>
-					<p class="m-20" id="aboutMe">Just a guy interested in coding and privacy.</p>
+					<div class="panel-title h2 mt-10">MorgeMönsch</div>
+					<div class="panel-subtitle">Morgemönsch</div>
+					<p class="m-20" id="aboutMe">Just a guy interested in coding and privacy.<br/>Currently working @ Swisscom.</p>
 				</div>
 				<div class="divider"></div>
 				<div class="panel-body">
 					<h3 class="h5">Technologies:</h3>
-					<dl>
-						<dd><div class="text-normal d-inline"><img src="./img/logos/rails.svg"><div class="listText text text-light d-inline">Ruby on Rails</a></div></dd>
-						<dd><div class="text-normal d-inline"><img src="./img/logos/react.svg"><div class="listText text text-light d-inline">React</div></div></dd>
-						<dd><div class="text-normal d-inline "><img src="./img/logos/dotnet-core.svg"><div class="listText d-inline">.NET Core</div></div></dd>
-						<dd><div class="text-normal d-inline"><img src="./img/logos/java.svg"><div class="listText d-inline	">Java</div></div></dd>
-					</dl>
+					<ul>
+						<li><div class="text-normal d-inline"><img src="./img/logos/rails.svg" alt="Ruby on Rails Logo"><div class="listText text text-light d-inline">Ruby on Rails</div></div></li>
+						<li><div class="text-normal d-inline"><img src="./img/logos/react.svg" alt="React Logo"><div class="listText text text-light d-inline">React</div></div></li>
+						<li><div class="text-normal d-inline "><img src="./img/logos/dotnet-core.svg" alt=".NET Core Logo"><div class="listText d-inline">.NET Core</div></div></li>
+						<li><div class="text-normal d-inline"><img src="./img/logos/java.svg" alt="Java Logo"><div class="listText d-inline	">Java</div></div></li>
+					</ul>
 					<h3 class="h5">Social:</h3>
-					<dl>
-						<dd><div class="text-normal d-inline"><img src="./img/logos/twitter.svg"><a href="https://twitter.com/morgemoensch" class="text text-light listText">Twitter</a></div></dd>
-						<dd><div class="text-normal d-inline"><img src="./img/logos/github.svg"><a href="https://github.com/morgemoensch" class="text text-light listText">Github</a></div></dd>
-					</dl>
+					<ul>
+						<li><div class="text-normal d-inline"><img src="./img/logos/twitter.svg" alt="Twitter Logo"><a href="https://twitter.com/morgemoensch" class="text text-light listText">Twitter</a></div></li>
+						<li><div class="text-normal d-inline"><img src="./img/logos/github.svg" alt="Github Logo"><a href="https://github.com/morgemoensch" class="text text-light listText">Github</a></div></li>
+					</ul>
 					
 					<h3 class="h5">Public Projects:</h3>
-					<dl>
-						<dd><div class="text-normal"><a href="https://thecharmingtools.com" class="text text-light">TheCharmingTools</a></div></dd>
-						<dd><div class="text-normal"><a href="https://bcschuepfen.ch" class="text text-light">BC Schüpfen</a></div></dd>
-					</dl>
+					<ul>
+						<li><div class="text-normal"><a href="https://thecharmingtools.com" class="text text-light">TheCharmingTools</a></div></li>
+						<li><div class="text-normal"><a href="https://bcschuepfen.ch" class="text text-light">BC Schüpfen</a></div></li>
+					</ul>
 				</div>
 			</div>
 		</div>
