Add Mail Address

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 						<li><div class="text-normal"><a href="https://thecharmingtools.com" class="text text-light">TheCharmingTools</a></div></li>
 						<li><div class="text-normal"><a href="https://bcschuepfen.ch" class="text text-light">BC Schüpfen</a></div></li>
 					</ul>
+					<h3 class="h5">Contact me:</h3>
+					<ul>
+						<li>
+							<a href="mailto:hello@morgemoensch.dev" class="text-light">hello@morgemoensch.dev</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
