--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<figure class="avatar avatar-xl">
 						<img src="./img/morgemoensch-avatar.jpg" alt="MorgeMoensch Avatar" class="img-fit-cover">
 					</figure>
-					<div class="panel-title h2 mt-10">MorgeMönsch</div>
+					<div class="panel-title h2 mt-10">Matthias</div>
 					<div class="panel-subtitle">Morgemönsch</div>
 					<p class="m-20" id="aboutMe">Just a guy interested in coding and privacy.<br/>Currently working @ Swisscom.</p>
 				</div>
