Add Background Image, Add Fonts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<h3 class="h5">Contact me:</h3>
 					<ul>
 						<li>
-							<a href="mailto:hello@morgemoensch.dev" class="text-light">hello@morgemoensch.dev</a>
+							<a href="mailto:hello@morgemoensch.dev" class="text text-light">hello@morgemoensch.dev</a>
 						</li>
 					</ul>
 				</div>
