Implement flex layout

--- a/index.html
+++ b/index.html
@@ -19,31 +19,38 @@
 					<p class="m-20" id="aboutMe">Just a guy interested in coding and privacy.<br/>Currently working @ Swisscom.</p>
 				</div>
 				<div class="divider"></div>
-				<div class="panel-body">
-					<h3 class="h5">Technologies:</h3>
-					<ul>
-						<li><div class="text-normal d-inline"><img src="./img/logos/rails.svg" alt="Ruby on Rails Logo"><div class="listText text text-light d-inline">Ruby on Rails</div></div></li>
-						<li><div class="text-normal d-inline"><img src="./img/logos/react.svg" alt="React Logo"><div class="listText text text-light d-inline">React</div></div></li>
-						<li><div class="text-normal d-inline "><img src="./img/logos/dotnet-core.svg" alt=".NET Core Logo"><div class="listText d-inline">.NET Core</div></div></li>
-						<li><div class="text-normal d-inline"><img src="./img/logos/java.svg" alt="Java Logo"><div class="listText d-inline	">Java</div></div></li>
-					</ul>
-					<h3 class="h5">Social:</h3>
-					<ul>
-						<li><div class="text-normal d-inline"><img src="./img/logos/twitter.svg" alt="Twitter Logo"><a href="https://twitter.com/morgemoensch" class="text text-light listText">Twitter</a></div></li>
-						<li><div class="text-normal d-inline"><img src="./img/logos/github.svg" alt="Github Logo"><a href="https://github.com/morgemoensch" class="text text-light listText">Github</a></div></li>
-					</ul>
-					
-					<h3 class="h5">Public Projects:</h3>
-					<ul>
-						<li><div class="text-normal"><a href="https://thecharmingtools.com" class="text text-light">TheCharmingTools</a></div></li>
-						<li><div class="text-normal"><a href="https://bcschuepfen.ch" class="text text-light">BC Schüpfen</a></div></li>
-					</ul>
-					<h3 class="h5">Contact me:</h3>
-					<ul>
-						<li>
-							<a href="mailto:hello@morgemoensch.dev" class="text text-light">hello@morgemoensch.dev</a>
-						</li>
-					</ul>
+				<div class="panel-body flex-container">
+					<div class="flex-element">
+						<h3 class="h5">Technologies:</h3>
+						<ul>
+							<li><div class="text-normal d-inline"><img src="./img/logos/rails.svg" alt="Ruby on Rails Logo"><div class="listText text text-light d-inline">Ruby on Rails</div></div></li>
+							<li><div class="text-normal d-inline"><img src="./img/logos/react.svg" alt="React Logo"><div class="listText text text-light d-inline">React</div></div></li>
+							<li><div class="text-normal d-inline "><img src="./img/logos/dotnet-core.svg" alt=".NET Core Logo"><div class="listText d-inline">.NET Core</div></div></li>
+							<li><div class="text-normal d-inline"><img src="./img/logos/java.svg" alt="Java Logo"><div class="listText d-inline	">Java</div></div></li>
+						</ul>
+					</div>
+					<div class="flex-element">
+						<h3 class="h5">Social:</h3>
+						<ul>
+							<li><div class="text-normal d-inline"><img src="./img/logos/twitter.svg" alt="Twitter Logo"><a href="https://twitter.com/morgemoensch" class="text text-light listText">Twitter</a></div></li>
+							<li><div class="text-normal d-inline"><img src="./img/logos/github.svg" alt="Github Logo"><a href="https://github.com/morgemoensch" class="text text-light listText">Github</a></div></li>
+						</ul>
+					</div>
+					<div class="flex-element">
+						<h3 class="h5">Public Projects:</h3>
+						<ul>
+							<li><div class="text-normal"><a href="https://thecharmingtools.com" class="text text-light">TheCharmingTools</a></div></li>
+							<li><div class="text-normal"><a href="https://bcschuepfen.ch" class="text text-light">BC Schüpfen</a></div></li>
+						</ul>
+					</div>
+					<div class="flex-element">
+						<h3 class="h5">Contact me:</h3>
+						<ul>
+							<li>
+								<a href="mailto:hello@morgemoensch.dev" class="text text-light">hello@morgemoensch.dev</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
