--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 						</ul>
 					</div>
 					<div class="flex-element">
+						<h3 class="h5">Interests:</h3>
+						<ul>
+							<li><div class="text-normal">Politics</div></li>
+							<li><div class="text-normal">Sports</div></li>
+							<li><div class="text-normal">Space Travel</div></li>
+							<li><div class="text-normal">Photo- & Videography</div></li>
+
+						</ul>
+					</div>
+					<div class="flex-element">
 						<h3 class="h5">Contact me:</h3>
 						<ul>
 							<li>
