Change jpeg Images to webp images for better performance

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="panel col-xl-6 col-md-10 col-mx-auto">
 				<div class="panel-header text-center">
 					<figure class="avatar avatar-xl">
-						<img src="./img/morgemoensch-avatar.jpg" alt="MorgeMoensch Avatar" class="img-fit-cover">
+						<img src="./img/morgemoensch-avatar.webp" alt="MorgeMoensch Avatar" class="img-fit-cover">
 					</figure>
 					<div class="panel-title h2 mt-10">Matthias</div>
 					<div class="panel-subtitle">Morgemönsch</div>
@@ -49,8 +49,7 @@
 							<li><div class="text-normal">Politics</div></li>
 							<li><div class="text-normal">Sports</div></li>
 							<li><div class="text-normal">Space Travel</div></li>
-							<li><div class="text-normal">Photo- & Videography</div></li>
-
+							<li><div class="text-normal">Photo- & Videographqy</div></li>
 						</ul>
 					</div>
 					<div class="flex-element">
