--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<li><div class="text-normal">Politics</div></li>
 								<li><div class="text-normal">Sports</div></li>
 								<li><div class="text-normal">Space Travel</div></li>
-								<li><div class="text-normal">Photo- & Videographqy</div></li>
+								<li><div class="text-normal">Photo- & Videography</div></li>
 							</ul>
 						</div>
 						<div class="flex-element">
