Suppress Favicon Call
Fix Source Element to be valid HTML

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>MorgeMönsch</title>
 		<link rel="stylesheet" href="./css/spectre.css" />
 		<link rel="stylesheet" href="./css/custom.css" />
+		<link rel="icon" href="data:,">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 		<meta charset="utf-8" />
 		<script>
@@ -18,7 +19,7 @@
 					<div class="panel-header text-center">
 						<figure class="avatar avatar-xl">
 							<picture>
-								<source src="./img/morgemoensch-avatar.webp" type="image/webp">
+								<source srcset="./img/morgemoensch-avatar.webp" type="image/webp">
 								<img src="./img/morgemoensch-avatar.jpg" alt="MorgeMoensch Avatar" class="img-fit-cover">
 							</picture>
 						</figure>
