Add Eminentia Productions Reference

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 							<h3 class="h5">Public Projects:</h3>
 							<ul>
 								<li><div class="text-normal"><a href="https://thecharmingtools.com" class="text text-light">TheCharmingTools</a></div></li>
+								<li><div class="text-normal"><a href="https://eminentia-productions.com" class="text text-light">Eminentia Productions</a></div></li>
 								<li><div class="text-normal"><a href="https://bcschuepfen.ch" class="text text-light">BC Schüpfen</a></div></li>
 							</ul>
 						</div>
